--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="theme-color" content="#000000" />
 
-    <title>final-form-vanilla-js</title>
+    <title>Pizza form</title>
   </head>
   <body>
         <div id="root"></div>
